Fix: Api Gateway 통합, security, zerotrust 주석 처리로 비활성화

--- a/cloudformation/auth.yaml
+++ b/cloudformation/auth.yaml
@@ -292,7 +292,7 @@ Resources:
   ApiGateway:
     Type: AWS::ApiGateway::RestApi
     Properties:
-      Name: !Sub 'wga-api-${Environment}'
+      Name: !Sub 'wga-auth-api-${Environment}'
       Description: 'WGA API Gateway'
       EndpointConfiguration:
         Types:
