--- a/cloudformation/main.yaml
+++ b/cloudformation/main.yaml
@@ -105,6 +105,85 @@ Resources:
   #       - Key: Environment
   #         Value: !Ref Environment
 
+Resources:
+  ApiGatewayDeployment:
+    Type: AWS::CloudFormation::CustomResource
+    Properties:
+      ServiceToken: !GetAtt DeploymentFunction.Arn
+      ApiId: !ImportValue 
+        Fn::Sub: "wga-base-${Environment}-ApiGatewayId"
+      StageName: !Ref Environment
+      
+  # 배포를 위한 Lambda 함수
+  DeploymentFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      Handler: index.handler
+      Role: !GetAtt DeploymentFunctionRole.Arn
+      Runtime: python3.9
+      Code:
+        ZipFile: |
+          import boto3
+          import cfnresponse
+          import logging
+          
+          logger = logging.getLogger()
+          logger.setLevel(logging.INFO)
+          
+          def handler(event, context):
+              logger.info('Received event: %s', event)
+              
+              api_id = event['ResourceProperties']['ApiId']
+              stage_name = event['ResourceProperties']['StageName']
+              
+              client = boto3.client('apigateway')
+              
+              try:
+                  if event['RequestType'] == 'Create' or event['RequestType'] == 'Update':
+                      # 배포 생성
+                      deployment = client.create_deployment(
+                          restApiId=api_id,
+                          stageName=stage_name,
+                          description='Automated deployment from CloudFormation'
+                      )
+                      logger.info('Created deployment: %s', deployment)
+                      cfnresponse.send(event, context, cfnresponse.SUCCESS, {
+                          'DeploymentId': deployment['id'],
+                          'ApiEndpoint': f"https://{api_id}.execute-api.{boto3.session.Session().region_name}.amazonaws.com/{stage_name}"
+                      })
+                  elif event['RequestType'] == 'Delete':
+                      # 삭제 요청 처리
+                      logger.info('Delete request - no action needed for API deployment')
+                      cfnresponse.send(event, context, cfnresponse.SUCCESS, {})
+              except Exception as e:
+                  logger.error('Error: %s', e)
+                  cfnresponse.send(event, context, cfnresponse.FAILED, {'Error': str(e)})
+      Timeout: 30
+      
+  # Lambda 실행 역할
+  DeploymentFunctionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: lambda.amazonaws.com
+            Action: 'sts:AssumeRole'
+      ManagedPolicyArns:
+        - 'arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
+      Policies:
+        - PolicyName: ApiGatewayAccess
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - 'apigateway:POST'
+                  - 'apigateway:GET'
+                Resource: '*'
+
 Outputs:
   CognitoDomain:
     Description: Cognito User Pool Domain
@@ -117,3 +196,7 @@ Outputs:
   UserPoolClientId:
     Description: Cognito User Pool Client ID
     Value: !Ref UserPoolClientId
+  
+  ApiEndpoint:
+    Description: "API Gateway endpoint URL"
+    Value: !Sub "https://${ImportValue:wga-base-${Environment}-ApiGatewayId}.execute-api.${AWS::Region}.amazonaws.com/${Environment}"
