Fix: s3 버킷 존재시 rollback 문제 수정

--- a/cloudformation/base.yaml
+++ b/cloudformation/base.yaml
@@ -10,11 +10,22 @@ Parameters:
       - test
       - prod
     Description: The deployment environment
+  
+  BucketExists:
+    Type: String
+    Default: "false"
+    AllowedValues:
+      - "true"
+      - "false"
+
+Conditions:
+  ShouldCreateBucket: !Equals [!Ref BucketExists, "false"]
 
 Resources:
   # S3 Buckets
   DeploymentBucket:
     Type: AWS::S3::Bucket
+    Condition: ShouldCreateBucket
     DeletionPolicy: Retain
     Properties:
       BucketName: !Sub 'wga-deployment-${Environment}'
