--- a/cloudformation/main.yaml
+++ b/cloudformation/main.yaml
@@ -73,25 +73,25 @@ Resources:
         Fn::Sub: "wga-base-${Environment}-ApiGatewayId"
       StageName: !Ref Environment
 
-  # SecurityAnalyticsStack:
-  #   Type: AWS::CloudFormation::Stack
-  #   Properties:
-  #     TemplateURL: !Sub 'https://s3.amazonaws.com/wga-cloudformation-${AWS::AccountId}/security-analytics.yaml'
-  #     Parameters:
-  #       Environment: !Ref Environment
-  #       CognitoUserPoolId: !Ref UserPoolId
-  #       CognitoClientId: !Ref UserPoolClientId
-  #       CognitoDomain: !Ref UserPoolDomain
-  #       CognitoIdentityPoolId: !Ref IdentityPoolId
-  #       OutputBucketName: !Ref OutputBucketName
-  #       SecurityAlertsTopicArn: !Ref SecurityAlertsTopicArn
-  #       ApiGatewayId: !ImportValue
-  #         Fn::Sub: "wga-base-${Environment}-ApiGatewayId"
-  #       ApiGatewayRootResourceId: !ImportValue
-  #         Fn::Sub: "wga-base-${Environment}-ApiGatewayRootResourceId"
-  #     Tags:
-  #       - Key: Environment
-  #         Value: !Ref Environment
+  SecurityAnalyticsStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: !Sub 'https://s3.amazonaws.com/wga-cloudformation-${AWS::AccountId}/security-analytics.yaml'
+      Parameters:
+        Environment: !Ref Environment
+        CognitoUserPoolId: !Ref UserPoolId
+        CognitoClientId: !Ref UserPoolClientId
+        CognitoDomain: !Ref UserPoolDomain
+        CognitoIdentityPoolId: !Ref IdentityPoolId
+        OutputBucketName: !Ref OutputBucketName
+        SecurityAlertsTopicArn: !Ref SecurityAlertsTopicArn
+        ApiGatewayId: !ImportValue
+          Fn::Sub: "wga-base-${Environment}-ApiGatewayId"
+        ApiGatewayRootResourceId: !ImportValue
+          Fn::Sub: "wga-base-${Environment}-ApiGatewayRootResourceId"
+      Tags:
+        - Key: Environment
+          Value: !Ref Environment
 
   # # # Zero Trust Stack
   # ZeroTrustStack:
