--- a/cloudformation/main.yaml
+++ b/cloudformation/main.yaml
@@ -57,10 +57,12 @@ Resources:
         CognitoDomain: !Ref UserPoolDomain
         CognitoIdentityPoolId: !Ref IdentityPoolId
         DeveloperMode: !Ref DeveloperMode
-        ApiGatewayId: !ImportValue
-          Fn::Sub: "wga-base-${Environment}-ApiGatewayId"
-        ApiGatewayRootResourceId: !ImportValue
-          Fn::Sub: "wga-base-${Environment}-ApiGatewayRootResourceId"
+        ApiGatewayId:
+          Fn::ImportValue:
+            Fn::Sub: "wga-base-${Environment}-ApiGatewayId"
+        ApiGatewayRootResourceId:
+          Fn::ImportValue:
+            Fn::Sub: "wga-base-${Environment}-ApiGatewayRootResourceId"
       Tags:
         - Key: Environment
           Value: !Ref Environment
@@ -69,8 +71,9 @@ Resources:
     Type: AWS::CloudFormation::CustomResource
     Properties:
       ServiceToken: !GetAtt DeploymentFunction.Arn
-      ApiId: !ImportValue 
-        Fn::Sub: "wga-base-${Environment}-ApiGatewayId"
+      ApiId:
+        Fn::ImportValue:
+          Fn::Sub: "wga-base-${Environment}-ApiGatewayId"
       StageName: !Ref Environment
 
   SecurityAnalyticsStack:
@@ -83,12 +86,16 @@ Resources:
         CognitoClientId: !Ref UserPoolClientId
         CognitoDomain: !Ref UserPoolDomain
         CognitoIdentityPoolId: !Ref IdentityPoolId
-        OutputBucketName: !Ref OutputBucketName
+        OutputBucketName:
+          Fn::ImportValue:
+            Fn::Sub: "wga-base-${Environment}-OutputBucketName"
         SecurityAlertsTopicArn: !Ref SecurityAlertsTopicArn
-        ApiGatewayId: !ImportValue
-          Fn::Sub: "wga-base-${Environment}-ApiGatewayId"
-        ApiGatewayRootResourceId: !ImportValue
-          Fn::Sub: "wga-base-${Environment}-ApiGatewayRootResourceId"
+        ApiGatewayId:
+          Fn::ImportValue:
+            Fn::Sub: "wga-base-${Environment}-ApiGatewayId"
+        ApiGatewayRootResourceId:
+          Fn::ImportValue:
+            Fn::Sub: "wga-base-${Environment}-ApiGatewayRootResourceId"
       Tags:
         - Key: Environment
           Value: !Ref Environment
@@ -201,4 +208,9 @@ Outputs:
   
   ApiEndpoint:
     Description: "API Gateway endpoint URL"
-    Value: !Sub "https://${ImportValue:wga-base-${Environment}-ApiGatewayId}.execute-api.${AWS::Region}.amazonaws.com/${Environment}"
+    Value:
+      Fn::Sub:
+        - "https://${ApiGatewayId}.execute-api.${AWS::Region}.amazonaws.com/${Environment}"
+        - ApiGatewayId:
+            Fn::ImportValue:
+              Fn::Sub: "wga-base-${Environment}-ApiGatewayId"
